--- a/app/views/home/application.html.erb
+++ b/app/views/home/application.html.erb
@@ -331,6 +331,13 @@ td.text-right {
   }
 
 }
+
+@media only screen and (max-width: 1024px) {
+  .w-slider {
+    height: 350px !important;
+  }
+
+}
     </style>
 <%end%> 
 <div style="margin-bottom: 100px;">
