--- a/app/views/home/cochair.html.erb
+++ b/app/views/home/cochair.html.erb
@@ -323,6 +323,12 @@ input[type='checkbox'] {
 
 }
 
+@media only screen and (max-width: 1024px) {
+  .w-slider {
+    height: 350px !important;
+  }
+
+}
 
 
    .wrap-collabsible4 {
