--- a/app/views/home/details.html.erb
+++ b/app/views/home/details.html.erb
@@ -39,6 +39,13 @@
   }
 
 }
+
+@media only screen and (max-width: 1024px) {
+  .w-slider {
+    height: 350px !important;
+  }
+
+}
     </style>
 <%end%> 
 
@@ -267,7 +274,7 @@ Panel members:
  
 
 
-<div class="card-new" style=" padding: 10px;">
+<div class="card-new" style=" padding: 30px; text-align: justify;">
 Researchers work at the boundary between confusion and clarity, scarcely knowing for sure which is which. As borne out by insider accounts of research, uncertainties and ambiguities encountered in the everyday practice of research require researchers to make choices, which are guided as much by objectivity and logic as also by the subjective assessment of researchers. Typically, personal, institutional, and social values influence the choice of research topics and methods. Researchers ought to become aware of the particular values and expectations guiding their work, so that they may exercise their individual agency while contributing to larger purposes. As a human endeavour, the activity of researchers impinge upon the lives of other human beings. Naturally, certain principles of honesty, fairness, transparency, responsibility, and justice must apply to research as much as these apply to other human activities. Therefore, in addition to contributing to larger purposes, researchers need to get accustomed to the idea of responsible conduct. As the practice of research expands to ever new domains, researchers are confronted with tasks for which the craft of research was not designed originally. Yet, the tools and procedures of research, adapted and used innovatively, seem to be effective for channelling individual contributions towards locally valuable outcomes. Such innovations in research appear to be proliferating in a variety of professional fields. Appreciating how research practice may be guided, moulded, or even transformed in response to personal and social values will be the main focus of this seminar.
 
 
