--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,6 +7,13 @@
     }
 }
 
+@media only screen and (max-width: 1024px) {
+  .w-slider {
+    height: 340px !important;
+  }
+
+}
+
 
 
      .button {
