--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -144,7 +144,7 @@
               <div class="dropdwon-toggle w-dropdown-toggle">
                 
                 <div class="icon-4 w-icon-dropdown-toggle"></div>
-                <div>Submissions</div>
+                <div>Tracks</div>
               </div>
               <nav class="w-dropdown-list">
                 <%= link_to "List of Tracks", tracks_path, :class => "dropdown-links w-dropdown-link" %>
