--- a/app/views/home/eac.html.erb
+++ b/app/views/home/eac.html.erb
@@ -1,6 +1,3 @@
-
-
-
 <% content_for :styles do %>
     <style type="text/css">
         .heading-tittle h2 {
@@ -181,8 +178,22 @@
 
         </div>
         <div class="row-2 w-row">
+          <div class="column-6 w-col w-col-6">
+            <div class="card">
+              <div class="row-12 w-row">
+                <div class="w-col w-col-3 align_for_mobile">
+                  <img src="../satish1.png" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%"></div>
+                <div class="column-7 w-col w-col-9" style="margin-top: 5px;">
+                  <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. Satish Modh</h4>
+                  <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Director</h5>
+                  <h5 class="heading-10" style="font-size: 17px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important; padding-left: 10px; padding-right: 10px;">VES Institute of Management Studies and Research</h5>
+                </div>
+              </div>
+            </div>
+          </div>
 
-                            <div class="column-6 w-col w-col-6">
+
+          <div class="column-6 w-col w-col-6">
             <div class="card">
               <div class="row-12 w-row">
                 <div class="w-col w-col-3 align_for_mobile">
