--- a/app/views/home/trackdetails.html.erb
+++ b/app/views/home/trackdetails.html.erb
@@ -103,6 +103,74 @@ ul.breadcrumb li a:hover {
     </style>
 <%end%> 
 
+      <div class="w-row" id="-1" style="margin-bottom: 50px;">
+        <ul class="breadcrumb">
+    <li><a href="/">Home</a></li>
+    <li><a href="/tracks">List of track</a></li>
+    <li style="text-transform: uppercase;"> Asian Way Of Thinking: Integrating Local Diversities In Management Education</li>
+  </ul>
+      <div class="column-12 w-col w-col-12">
+        <div class="card-new">
+          <div class="row-5 w-row">
+            <div class="w-col w-col-12" style="padding: 10px;">
+              <h4 class="heading-8" style="text-align: center !important;font-family: 'Roboto Condensed', sans-serif;font-size: 20px; "><u> ASIAN WAY OF THINKING</u><br> Integrating Local Diversities In Management Education</h4>
+
+              <div class="row-5 w-row">
+              <div class="column-5 w-col w-col-5">
+                <div class="column-1 w-col w-col-1">
+                  
+                </div>
+                <div class="column-8 w-col w-col-8">
+                  <h4 class="heading-8" style="text-align: left;font-family: 'Roboto Condensed', sans-serif; font-size: 18px"> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;"> Track Chair : </p>
+        </h4>
+                              <div class="card-detail" style="width:100%">
+                                <a href="/trackchairs#6">
+                <img src="../chavi.png" class="image-hover" alt="Avatar" style="width:100%; height: 227px;object-fit: cover; object-position: 0% 10;">
+              </a>
+                <div class="container">
+                  <a href="/trackchairs#6">
+                  <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. Chavi Bhargava Sharma</h4>
+                  </a>
+                  <!-- <p style="text-align: center; font-size: 14px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important ">(kuperan@uum.edu.my)</p> -->
+                  <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Executive Director  & Dean- Faculty of Behavioral & Social Sciences</h5>
+                  <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Manav Rachna International Institute of Research and Studies</h5>
+              
+                </div>
+
+              </div>
+                </div>
+                <div class="column-3 w-col w-col-3"></div>
+                
+              </div>
+              <div class="column-7 w-col w-col-7">
+              <div class="column-11 w-col w-col-11">
+                 <h4 class="heading-8" style="text-align: left;font-family: 'Roboto Condensed', sans-serif; font-size: 18px"> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;"> Track Description: </p>
+                 </h4>
+                 <p style="text-align: justify;">
+                    Content coming soon.
+                 </p>
+              </div>
+              <div class="column-1 w-col w-col-1"></div>
+            </div>
+            </div>
+              <div class="column-4 w-col w-col-4"></div>
+             <div class="column-4 w-col w-col-4" style="border-right:none !important; text-align: center">
+               <%= link_to new_abstract_path, :class => "button" do %>
+                <span>Upload your abstract</span>
+                <%end%>
+             </div>
+             <div class="column-4 w-col w-col-4"></div>
+              
+
+
+            </div>
+          </div>
+        </div>
+      </div>
+</div>
+
+
+
 
 <div class="w-row" id ="0" style="height: 900px !important;">
   <ul class="breadcrumb">
@@ -155,7 +223,16 @@ ul.breadcrumb li a:hover {
                 <h4 class="heading-8" style="text-align: left;font-family: 'Roboto Condensed', sans-serif; font-size: 18px"> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;"> Track Description: </p>
                 </h4>
                 <p style="text-align: justify;">
-                Content coming soon.
+                It is being increasingly felt that there is a disconnect between what is good for the economy and what is good for society. Several individuals and groups are not able to participate in the economy, they continue to operate as marginal stakeholders on the fringes. Many attempts are being made to correct aspects of the current system, to include hitherto neglected groups and people. While such attempts deserve attention and recognition, these are basically co-efficient based solutions which cannot change the structure of a system which is designed to  exclude certain groups. We need solutions and ideas which work on making improvements to established systems and structures, more importantly we need an imagination to conjure up new systems and structures. An inclusive economy is one in which there is expanded opportunity for a more broadly shared prosperity. An inclusive economy advances the interests of those who face the greatest barriers to advancing their well-being. <br> This track seeks to advance our understanding of an inclusive economy, we invite papers and presentations on the following indicative themes: <br>
+ <li>Assessing and measuring the nature of inclusion</li>
+<li>Understanding inequality and the process of upward mobility </li>
+<li>The role of civil society in catalysing participation and inclusion </li>
+<li>Innovations and advocacy to increase access to markets </li>
+<li>Role of technology in catalysing market inclusion </li>
+<li>Organisational innovations to catalyse inclusion </li>
+<li>The impact of laws in fostering inclusion </li>
+This is an indicative list of themes for the track. Authors are encouraged to share innovative ideas not covered by the themes listed but fitting into the overall theme of the track. 
+
               </p>
               </div>
               <div class="column-1 w-col w-col-1"></div></div>
