--- a/app/views/home/tracks.html.erb
+++ b/app/views/home/tracks.html.erb
@@ -89,23 +89,23 @@ ul {
 
     <div style="margin-bottom: 200px;">
       <div class="heading-tittle color-black w-container" style="max-width: none !important;">
-        <div data-delay="4000" data-animation="slide" data-autoplay="1" data-duration="500" data-infinite="1" class="w-slider">
+<!--         <div data-delay="4000" data-animation="slide" data-autoplay="1" data-duration="500" data-infinite="1" class="w-slider">
           <div class="w-slider-mask">
             <div class="slide-2 w-slide"></div>
             <div class="slide-3 w-slide">
               <a href="/tracks" class="button" style="position: absolute; top: 63%; left: 47%;  cursor: pointer; opacity: 0"></a>
             </div>
             <!-- <div class="slide-6 w-slide"></div> -->
-          </div>
-          <div class="w-slider-arrow-left">
+          <!-- </div> -->
+        <!--   <div class="w-slider-arrow-left">
             <div class="w-icon-slider-left"></div>
           </div>
           <div class="w-slider-arrow-right">
             <div class="w-icon-slider-right"></div>
           </div>
-          <div class="w-slider-nav w-round"></div>
-        </div>
-        <div class="w-container"></div>
+          <div class="w-slider-nav w-round"></div> -->
+        <!-- </div> --> 
+        <!-- <div class="w-container"></div> -->
         <h2 class="" style="margin-top: 30px; margin-bottom:30px;"><p style="text-decoration: underline; text-decoration-color: #3b1e9a;">List of tracks</p></h2>
         <h5 tyle="margin-top: 30px; margin-bottom:30px;"><p style="text-decoration: ; text-decoration-color: #3b1e9a; font-family: 'Roboto Condensed', sans-serif;">The conference presentation tracks include:</h5>
       </div>
@@ -114,7 +114,7 @@ ul {
         <ul>
 
           <li style="width:50%;">
-            <a href=""><img src="../Icons/AsianWayofThinking.png" style="height: 20px; width: 20px; display: inline;font-size: 15px;"><p style="padding-top: 20px; display: inline">&nbsp;Asian Way of Thinking: Integrating Local Diversities in Management Education</p>
+            <a href="/trackdetails#-1"><img src="../Icons/AsianWayofThinking.png" style="height: 20px; width: 20px; display: inline;font-size: 15px;"><p style="padding-top: 20px; display: inline">&nbsp;Asian Way of Thinking: Integrating Local Diversities in Management Education</p>
             </a>
           </li>
 
