--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -114,7 +114,7 @@
             
           <!-- </div> -->
           <div class="slide-4 w-slide">
-            <a href="/tracks" class="button" style="position: absolute; top: 63%; left: 58%;  cursor: pointer; opacity: 0">  
+<!--             <a href="/tracks" class="button" style="position: absolute; top: 63%; left: 58%;  cursor: pointer; opacity: 0">  
             </a>
             <a href="http://www.unprme.org/" target="_blank" class="button" style="position: absolute; top: 75%; left: 45%;  cursor: pointer; opacity: 0">  
               some content with the text of <br>
@@ -130,29 +130,20 @@
               some hs with the a <br>
               again <br>
               hbs
-            </a>
+            </a> -->
           </div>
 
           <div class="slide-7 w-slide"></div>
 
           
           <div class="slide-5 w-slide">
-            <a href="/fees" class="button" style="position: absolute; top: 59%; left: 35%;  cursor: pointer; opacity: 0">  
+            <a href="/fees" class="button" style="position: absolute; top: 89%; left: 21%;  cursor: pointer; opacity: 0">  
             </a>
-            <a href="http://www.unprme.org/" target="_blank" class="button" style="position: absolute; top: 75%; left: 45%;  cursor: pointer; opacity: 0">  
-              some content with the text of <br>
-              again <br>
-              jasdh
+            <a href="http://www.unprme.org/" target="_blank" class="button" style="position: absolute; top: 88%; left: 67%;  cursor: pointer; opacity: 0"> 
             </a>
-            <a href="https://www.unglobalcompact.org/" target="_blank" class="button" style="position: absolute; top: 75%; left: 65%;  cursor: pointer; opacity: 0"> 
-             some content with the  e<br>
-              again <br>
-              kajshg
+            <a href="https://www.unglobalcompact.org/" target="_blank" class="button" style="position: absolute; top: 88%; left: 75%;  cursor: pointer; opacity: 0"> 
             </a>
-            <a href="http://spjimr.org/" target="_blank" class="button" style="position: absolute; top: 75%; left: 82%;  cursor: pointer; opacity: 0">  
-              some hs with the a <br>
-              again <br>
-              hbs
+            <a href="http://spjimr.org/" target="_blank" class="button" style="position: absolute; top: 88%; left: 85%;  cursor: pointer; opacity: 0">  
             </a>
           </div>
 
